[package]
name = "bevy_project_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
egui_dock = "0.12.0"
egui-dropdown = "0.9.0"
directories = "5.0.1"
egui-phosphor = "0.5.0"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
egui-modal = "0.3.6"
crossbeam-channel = "0.5.12"
cansi = "2.2.1"